--- a/子串与子序列问题.md
+++ b/子串与子序列问题.md
@@ -1,3 +1,7 @@
+[toc]
+
+
+
 ## 子串与子序列问题
 
 **子串**：原序列中连续的一段
@@ -9,4 +13,24 @@
 
 
 ### 子串问题
+
+> 当前状态一定由上一个临近状态推得
+
+一维的情况下 dp[i] 只能由 dp[i-1] 计算得到，若在原数组中i与i-1不满足题目要求，则不需要更新dp[i] (保持初始值，一般是0)
+二维的情况下 dp[i][j] 只能由 dp[i+1][j-1] (回文的情况)/dp[i-1][j-1] (两个数组或字符串比较的情况) 计算得到，若在原数组中i与j不满足题目要求，则不需要更新dp[i][j] (保持初始值，一般是0)
+
+
+
+918 环形子数组最大和
+
+有环形 : sum - min
+
+
+
+
+
+## 子序列问题
+
+1.定义状态：dp[i]为以i结尾的递增子序列长度
+2.状态转移方程：因为是不需要连续的，所以dp[i]能由dp[0...i-1] 计算得到，记dp[0...i-1]为dp[j],因此在nums[i] > nums[j]时，更新 dp[i] = max(dp[j] + 1,dp[i])
 
